--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@kinde-oss/kinde-auth-nextjs": "^2.10.0",
     "@prisma/client": "^6.19.0",
     "next": "16.0.1",
+    "next-themes": "^0.4.6",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "stripe": "^19.3.1"
